--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,23 @@
     <scope>provided</scope>
 </dependency>
   </dependencies>
+  
   <build>
     <finalName>CalculatorWeb</finalName>
+    <configuration>
+    <container>
+        <containerId>tomcat8x</containerId>
+        <type>remote</type>
+    </container>
+    <configuration>
+        <type>runtime</type>
+        <properties>
+            <cargo.remote.username>admin</cargo.remote.username>
+            <cargo.remote.password>admin</cargo.remote.password>
+            <cargo.tomcat.manager.url>http://localhost:8080/manager/text
+              </cargo.tomcat.manager.url>
+        </properties>
+    </configuration>
+</configuration> 
   </build>
 </project>
