--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
         <type>runtime</type>
         <properties>
             <cargo.remote.username>admin</cargo.remote.username>
-            <cargo.remote.password>admin</cargo.remote.password>
-            <cargo.tomcat.manager.url>http://localhost:8080/manager/text
+            <cargo.remote.password>password</cargo.remote.password>
+            <cargo.tomcat.manager.url>http://localhost:9090/manager/text
               </cargo.tomcat.manager.url>
         </properties>
     </configuration>
