--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
     <version>4.11</version>
     <scope>test</scope>
 </dependency>
-    
     <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
 <dependency>
     <groupId>javax.servlet</groupId>
@@ -23,6 +22,16 @@
     <version>3.0-alpha-1</version>
     <scope>provided</scope>
 </dependency>
+    <plugin>
+		<groupId>org.apache.tomcat.maven</groupId>
+		<artifactId>tomcat7-maven-plugin</artifactId>
+		<version>2.2</version>
+		<configuration>
+			<url>http://localhost:8080/manager/text</url>
+			<server>TomcatServer</server>
+			<path>/mkyongWebApp</path>
+		</configuration>
+	</plugin>
   </dependencies>
   
   <build>
