--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
   <version>1-SNAPSHOT</version>
   <name>CalculatorWeb Maven Webapp</name>
   <url>http://maven.apache.org</url>
+	<plugins>
+	<plugin>
+		<groupId>org.apache.tomcat.maven</groupId>
+		<artifactId>tomcat7-maven-plugin</artifactId>
+		<version>2.2</version>
+		<configuration>
+			<url>http://localhost:8080/manager/text</url>
+			<server>TomcatServer</server>
+			<path>/mkyongWebApp</path>
+		</configuration>
+	</plugin>
+	</plugins>
   <dependencies>
      <!-- https://mvnrepository.com/artifact/junit/junit -->
 <dependency>
@@ -22,16 +34,6 @@
     <version>3.0-alpha-1</version>
     <scope>provided</scope>
 </dependency>
-    <plugin>
-		<groupId>org.apache.tomcat.maven</groupId>
-		<artifactId>tomcat7-maven-plugin</artifactId>
-		<version>2.2</version>
-		<configuration>
-			<url>http://localhost:8080/manager/text</url>
-			<server>TomcatServer</server>
-			<path>/mkyongWebApp</path>
-		</configuration>
-	</plugin>
   </dependencies>
   
   <build>
