--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,21 @@
 </dependency>
   </dependencies>
   <build>
+    <plugins>
+        <plugin> 
+          <!-- Tomcat plugin -->  
+ 
+ <groupId>org.apache.tomcat.maven</groupId>  
+ <artifactId>tomcat7-maven-plugin</artifactId>  
+ <version>2.2</version>  
+ <configuration>  
+  <url>http://localhost:9090/manager/text</url>  
+  <server>TomcatServer</server>    *(From maven > settings.xml)*
+  <username>admin</username>  
+  <password>password</password>   
+ </configuration>   
+</plugin>
+ </plugins>
     <finalName>CalculatorWeb</finalName>
   </build>
 </project>
