--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mahesh</groupId>
-  <artifactId>CalculatorWeb</artifactId>
+  <artifactId>CalculatorDev</artifactId>
   <packaging>war</packaging>
   <version>1-SNAPSHOT</version>
   <name>CalculatorWeb Maven Webapp</name>
