--- a/pom.xml
+++ b/pom.xml
@@ -22,22 +22,37 @@
     <version>3.0-alpha-1</version>
     <scope>provided</scope>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/selenium-maven-plugin -->
+<dependency>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>selenium-maven-plugin</artifactId>
+    <version>2.3</version>
+</dependency>
+	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.14.3</version>
+			<scope>compile</scope>
+		</dependency>
   </dependencies>
   <build>
     <plugins>
-        <plugin> 
-          <!-- Tomcat plugin -->  
+       <plugin> 
+          
  
  <groupId>org.apache.tomcat.maven</groupId>  
  <artifactId>tomcat7-maven-plugin</artifactId>  
  <version>2.2</version>  
  <configuration>  
   <url>http://localhost:9090/manager/text</url>  
-  <server>TomcatServer</server>    *(From maven > settings.xml)*
+  <server>TomcatServer</server>    
   <username>admin</username>  
   <password>password</password>   
  </configuration>   
-</plugin>
+</plugin> 
+
  </plugins>
     <finalName>Calculator_dev</finalName>
   </build>
