--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
     <version>3.0-alpha-1</version>
     <scope>provided</scope>
 </dependency>
+	  
+	  <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>3.4.0</version>
+            </dependency>
+	
 
 <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/selenium-maven-plugin -->
 <dependency>
