--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
  <artifactId>tomcat7-maven-plugin</artifactId>  
  <version>2.2</version>  
  <configuration>  
-  <url>http://localhost:9090/manager/text</url>  
+  <url>http://localhost:9090/manager/text</url>   *(From maven > settings.xml)*
   <server>TomcatServer</server>   
   <username>admin</username>  
   <password>password</password>   
